Добавляет адаптив 480px, 768px, 1200px

--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -1,5 +1,8 @@
 .social-list {
+  @extend %list;
+
   display: flex;
+  justify-content: center;
   margin-top: 16px;
 }
 
@@ -10,6 +13,8 @@
 }
 
 .social-list__link {
+  @extend %link;
+
   display: flex;
   width: 44px;
   height: 44px;
