--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,8 +1,9 @@
 .hero {
   max-width: 1600px;
   margin: 0 auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+
   background-color: $secondary-bg-color;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -13,24 +14,44 @@
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .hero__title {
-  width: 696px;
   margin-left: auto;
   margin-right: auto;
 
+  font-size: 26px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
+
+  @media screen and (max-width: 479px) {
+    max-width: 360px;
+  }
+
+  @media screen and (min-width: 480px) {
+    width: 360px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .main-btn {
   margin-top: 30px;
   padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
 
   font-weight: bold;
   font-size: 16px;
@@ -38,8 +59,6 @@
   color: #ffffff;
   border: 0;
   box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.15);
-
-  align-items: center;
   letter-spacing: 0.06em;
   background-color: $accent-color;
 
