--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./components/logo";
 @import "./layout/header";
 @import "./utils/current";
+@import "./components/menu-button";
 @import "./layout/hero";
 @import "./layout/features";
 @import "./layout/work";
