--- a/css/main.css
+++ b/css/main.css
@@ -40,25 +40,50 @@ img {
   display: block;
 }
 
-.list {
+.menu-set, .mob-contacts__item, .mob-social-set, .nav__list, .features-list, .work-list, .social-list, .clients-list, .footer-address__list {
   list-style: none;
 }
 
-.link {
+.logo, .menu-set__link, .mob-contacts__link, .mob-social__link, .nav__link, .contacts-list__link, .social-list__link, .clients-list__link, .footer__logo, .footer-address__link {
   text-decoration: none;
 }
 
 .container {
   margin: 0 auto;
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   width: 100%;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .visually-hidden {
@@ -80,10 +105,17 @@ img {
 .logo {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: calc(28 / 24);
   letter-spacing: 0.03em;
   color: #000000;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: calc(31 / 26);
+  }
 }
 
 .logo--accent {
@@ -91,8 +123,9 @@ img {
 }
 
 .header {
+  position: relative;
   font-weight: 500;
-  line-height: 1.14;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   border-bottom: 1px solid #e5e5e5;
 }
@@ -103,12 +136,106 @@ img {
 }
 
 .header__logo {
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
+@media screen and (min-width: 768px) {
+  .header__logo {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+}
+
+/*-------------------------------Mobile menu-------------------------------- */
+.container-menu {
+  display: none;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  padding-top: 60px;
+  height: 796px;
+  padding-left: 42px;
+  padding-right: 42px;
+  background-color: #ffffff;
+}
+
+.container-menu.is-open {
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .container-menu {
+    display: none;
+  }
+}
+
+.menu-set__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.menu-set__link {
+  font-size: 40px;
+  line-height: calc(47 / 40);
+  color: #212121;
+}
+
+.mob-contacts__set {
+  margin-top: 302px;
+}
+
+.mob-contacts__item:last-child {
+  margin-top: 32px;
+}
+
+.mob-contacts__link {
+  color: currentColor;
+  font-size: 24px;
+  line-height: calc(28 / 24);
+}
+
+.mob-contacts__link--accent {
+  font-size: 34px;
+  color: #2196f3;
+}
+
+.mob-social-set {
+  margin-top: 64px;
+}
+
+.mob-social__item {
+  display: inline-flex;
+}
+
+.mob-social__item:not(:last-child) {
+  margin-right: 10px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mob-social__link {
+  font-size: 18px;
+  line-height: calc(22 / 18);
+  color: #2196f3;
+}
+
+/*----------------------------------------------------------------------------- */
 .nav {
-  margin-left: 95px;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .nav {
+    display: block;
+    margin-left: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav {
+    margin-left: 95px;
+  }
 }
 
 .nav__list {
@@ -133,8 +260,20 @@ img {
 }
 
 .contacts-list {
-  display: flex;
-  margin-left: auto;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list {
+    display: flex;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts-list {
+    flex-direction: column;
+  }
 }
 
 .contacts-list__item {
@@ -142,21 +281,42 @@ img {
   align-items: center;
 }
 
-.contacts-list__item:not(:first-child) {
-  margin-left: 50px;
+@media screen and (min-width: 1200px) {
+  .contacts-list__item:not(:first-child) {
+    margin-left: 50px;
+  }
 }
 
 .contacts-list__link {
   display: flex;
   align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
   color: #757575;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-list__link:hover, .contacts-list__link:focus {
   color: #2196f3;
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts-list__link--pre {
+    padding-top: 21px;
+    padding-bottom: 5px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts-list__link--post {
+    padding-top: 5px;
+    padding-bottom: 21px;
+  }
 }
 
 .contacts-list__icon {
@@ -178,23 +338,58 @@ img {
   color: #2196f3;
 }
 
-.current::after {
-  content: "";
+@media screen and (min-width: 768px) {
+  .current::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #2196f3;
+  }
+}
+
+.menu-button {
+  position: relative;
+  z-index: 2;
+  display: inline-flex;
+  margin: 0;
+  margin-left: auto;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.menu-button:hover, .menu-button:focus {
+  fill: #2196f3;
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
   display: block;
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #2196f3;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
 }
 
 .hero {
   max-width: 1600px;
   margin: 0 auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-color: #2f303a;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-bg.jpg");
   background-position: center;
@@ -203,28 +398,55 @@ img {
   text-align: center;
 }
 
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+}
+
 .hero__title {
-  width: 696px;
   margin-left: auto;
   margin-right: auto;
+  font-size: 26px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
 }
 
+@media screen and (max-width: 479px) {
+  .hero__title {
+    max-width: 360px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .hero__title {
+    width: 360px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
+
 .main-btn {
   margin-top: 30px;
   padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
   color: #ffffff;
   border: 0;
   box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.15);
-  align-items: center;
   letter-spacing: 0.06em;
   background-color: #2196f3;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -235,22 +457,37 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.features-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: calc(-1 * 30px);
-  margin-top: calc(-1 * 30px);
+@media screen and (min-width: 768px) {
+  .features-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: calc(-1 * 30px);
+    margin-top: calc(-1 * 30px);
+  }
 }
 
-.features-list__item {
-  margin-left: 30px;
-  margin-top: 30px;
-  flex-basis: calc((100% - 30px * 4) / 4);
+@media screen and (max-width: 768px) {
+  .features-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
-.features-list__item:not(:first-child) {
-  margin-left: 30px;
-  margin-top: 30px;
+@media screen and (min-width: 768px) {
+  .features-list__item {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc((100% - 30px * 2) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features-list__item {
+    flex-basis: calc((100% - 30px * 4) / 4);
+  }
+  .features-list__item:not(:first-child) {
+    margin-left: 30px;
+    margin-top: 30px;
+  }
 }
 
 .features-list__thumb {
@@ -264,10 +501,17 @@ img {
 .features-list__icons {
   width: 70px;
   height: 70px;
+  margin: 0 auto;
 }
 
 .features-list__title {
   margin-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .features-list__title {
+    text-align: left;
+  }
 }
 
 .features-list__text {
@@ -275,7 +519,14 @@ img {
 }
 
 .work {
+  display: none;
   padding-top: 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .work {
+    display: block;
+  }
 }
 
 .work__title {
@@ -321,7 +572,6 @@ img {
 }
 
 .features-list__title, .work-list__text {
-  text-align: left;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
@@ -329,22 +579,29 @@ img {
 
 .team {
   background-color: #f5f4fa;
+  display: none;
 }
 
 .team-list {
-  display: flex;
-  margin-top: 50px;
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list {
+    margin-top: 50px;
+  }
 }
 
 .team-list__item {
-  flex-basis: calc((100% - 30px * 3) / 4);
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 767px) {
+  .team-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .team-list__card-content {
@@ -366,6 +623,7 @@ img {
 
 .social-list {
   display: flex;
+  justify-content: center;
   margin-top: 16px;
 }
 
@@ -399,33 +657,74 @@ img {
   fill: #ffffff;
 }
 
+.clients__title {
+  margin-bottom: 50px;
+}
+
+@media screen and (max-width: 1199px) {
+  .clients__title {
+    font-size: 28px;
+    line-height: 1.178;
+  }
+}
+
 .clients-list {
   display: flex;
-  margin-top: 50px;
+  flex-wrap: wrap;
+  margin-left: calc(-1 * 30px);
+  margin-top: calc(-1 * 30px);
 }
 
 .clients-list__item {
+  margin-top: 30px;
+  margin-left: 30px;
+  flex-basis: calc((100% - 30px * 2) / 2);
   border: 1px solid #afb1b8;
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients-list__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .clients-list__item:hover, .clients-list__item:focus {
   border-color: #2196f3;
 }
 
+@media screen and (min-width: 768px) {
+  .clients-list__item {
+    flex-basis: calc((100% - 30px * 3) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list__item {
+    flex-basis: calc((100% - 30px * 6) / 6);
+  }
+}
+
 .clients-list__link {
   display: flex;
-  width: 168px;
-  height: 90px;
-  padding: 16px 32px;
+}
+
+@media screen and (min-width: 480px) {
+  .clients-list__link {
+    padding: 15px 51px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-list__link {
+    padding: 15px 59px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list__link {
+    padding: 15px 31px;
+  }
 }
 
 .clients-list__icon {
+  margin-left: auto;
+  margin-right: auto;
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -441,8 +740,37 @@ img {
   background-color: #2f303a;
 }
 
-.footer__sections {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .footer__sections {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__sections {
+    justify-content: flex-start;
+  }
+}
+
+.footer__address-section {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__address-section {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__address-section {
+    align-items: flex-start;
+    text-align: left;
+  }
 }
 
 .footer__logo {
@@ -475,10 +803,26 @@ img {
   color: #ffffff;
 }
 
-.footer__subscribe-section {
-  display: flex;
-  flex-direction: column;
-  margin-left: 70px;
+@media screen and (max-width: 767px) {
+  .footer__subscribe-section {
+    margin-top: 60px;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__subscribe-section {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__subscribe-section {
+    align-items: flex-start;
+  }
 }
 
 .footer__subscribe-text {
@@ -508,16 +852,57 @@ img {
   display: flex;
   flex-direction: column;
   margin-left: auto;
+  justify-content: center;
+  text-align: center;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__mailing-section {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__mailing-section {
+    margin-top: 60px;
+    flex-grow: 2;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .footer__mailing-section {
+    display: inline-flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__mailing-section {
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
 }
 
 .footer__mail-form {
-  display: flex;
   margin-top: 20px;
+}
+
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .footer__mail-form {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__mail-form {
+    display: flex;
+  }
 }
 
 .footer__mailing-input {
   padding: 14px 15px;
-  width: 358px;
+  width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: transparent;
@@ -531,14 +916,51 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 
+@media screen and (max-width: 767px) {
+  .footer__mailing-input {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__mailing-input {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__mailing-input {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__mailing-input {
+    width: 358px;
+  }
+}
+
 .footer__mailing-button {
   position: relative;
-  margin: 0;
-  margin-left: 12px;
   min-width: 200px;
   padding: 10px;
   padding-left: 29px;
   text-align: left;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__mailing-button {
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__mailing-button {
+    margin-left: 12px;
+    margin-top: 0;
+  }
 }
 
 .footer__mailing-icon {
@@ -553,10 +975,16 @@ img {
 
 .backdrop {
   position: fixed;
+  z-index: 3;
   top: 0;
   left: 0;
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
   height: 100vh;
+  overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.1);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -569,16 +997,36 @@ img {
 
 .modal {
   position: absolute;
+  margin: 0 auto;
+  padding: 40px;
   top: 50%;
   left: 50%;
-  padding: 40px;
-  min-width: 528px;
-  min-height: 582px;
+  width: 90%;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 479px) {
+  .modal {
+    max-width: 450px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .backdrop.is-hidden .modal {
@@ -664,6 +1112,14 @@ img {
   fill: #2196f3;
 }
 
+@media screen and (max-width: 1199px) {
+  .accept-label {
+    font-size: 12px;
+    line-height: calc(14 / 12);
+    letter-spacing: 0.02em;
+  }
+}
+
 .modal__textarea-field {
   padding-top: 12px;
   padding-left: 16px;
@@ -683,12 +1139,12 @@ img {
 }
 
 .custom-checkbox {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   width: 15px;
   height: 15px;
-  margin-right: 7px;
+  margin-right: 5px;
   border: 2px solid #212121;
   border-radius: 2px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -704,7 +1160,6 @@ img {
   border-radius: 2px;
 } */
 .accept-label {
-  display: flex;
   align-items: center;
 }
 
