--- a/css/portfolio-main.css
+++ b/css/portfolio-main.css
@@ -40,25 +40,50 @@ img {
   display: block;
 }
 
-.list {
+.menu-set, .mob-contacts__item, .mob-social-set, .nav__list, .social-list, .footer-address__list {
   list-style: none;
 }
 
-.link {
+.logo, .menu-set__link, .mob-contacts__link, .mob-social__link, .nav__link, .contacts-list__link, .social-list__link, .footer__logo, .footer-address__link {
   text-decoration: none;
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   width: 100%;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .container {
   margin: 0 auto;
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
 
 .visually-hidden {
@@ -80,10 +105,17 @@ img {
 .logo {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: calc(28 / 24);
   letter-spacing: 0.03em;
   color: #000000;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: calc(31 / 26);
+  }
 }
 
 .logo--accent {
@@ -91,8 +123,9 @@ img {
 }
 
 .header {
+  position: relative;
   font-weight: 500;
-  line-height: 1.14;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   border-bottom: 1px solid #e5e5e5;
 }
@@ -103,12 +136,106 @@ img {
 }
 
 .header__logo {
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
+@media screen and (min-width: 768px) {
+  .header__logo {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+}
+
+/*-------------------------------Mobile menu-------------------------------- */
+.container-menu {
+  display: none;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  padding-top: 60px;
+  height: 796px;
+  padding-left: 42px;
+  padding-right: 42px;
+  background-color: #ffffff;
+}
+
+.container-menu.is-open {
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .container-menu {
+    display: none;
+  }
+}
+
+.menu-set__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.menu-set__link {
+  font-size: 40px;
+  line-height: calc(47 / 40);
+  color: #212121;
+}
+
+.mob-contacts__set {
+  margin-top: 302px;
+}
+
+.mob-contacts__item:last-child {
+  margin-top: 32px;
+}
+
+.mob-contacts__link {
+  color: currentColor;
+  font-size: 24px;
+  line-height: calc(28 / 24);
+}
+
+.mob-contacts__link--accent {
+  font-size: 34px;
+  color: #2196f3;
+}
+
+.mob-social-set {
+  margin-top: 64px;
+}
+
+.mob-social__item {
+  display: inline-flex;
+}
+
+.mob-social__item:not(:last-child) {
+  margin-right: 10px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mob-social__link {
+  font-size: 18px;
+  line-height: calc(22 / 18);
+  color: #2196f3;
+}
+
+/*----------------------------------------------------------------------------- */
 .nav {
-  margin-left: 95px;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .nav {
+    display: block;
+    margin-left: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav {
+    margin-left: 95px;
+  }
 }
 
 .nav__list {
@@ -133,8 +260,20 @@ img {
 }
 
 .contacts-list {
-  display: flex;
-  margin-left: auto;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list {
+    display: flex;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts-list {
+    flex-direction: column;
+  }
 }
 
 .contacts-list__item {
@@ -142,21 +281,42 @@ img {
   align-items: center;
 }
 
-.contacts-list__item:not(:first-child) {
-  margin-left: 50px;
+@media screen and (min-width: 1200px) {
+  .contacts-list__item:not(:first-child) {
+    margin-left: 50px;
+  }
 }
 
 .contacts-list__link {
   display: flex;
   align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
   color: #757575;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-list__link:hover, .contacts-list__link:focus {
   color: #2196f3;
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts-list__link--pre {
+    padding-top: 21px;
+    padding-bottom: 5px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts-list__link--post {
+    padding-top: 5px;
+    padding-bottom: 21px;
+  }
 }
 
 .contacts-list__icon {
@@ -178,16 +338,18 @@ img {
   color: #2196f3;
 }
 
-.current::after {
-  content: "";
-  display: block;
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #2196f3;
+@media screen and (min-width: 768px) {
+  .current::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #2196f3;
+  }
 }
 
 .section-list {
@@ -292,6 +454,7 @@ img {
 
 .social-list {
   display: flex;
+  justify-content: center;
   margin-top: 16px;
 }
 
@@ -328,8 +491,8 @@ img {
 .hero {
   max-width: 1600px;
   margin: 0 auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-color: #2f303a;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-bg.jpg");
   background-position: center;
@@ -338,28 +501,55 @@ img {
   text-align: center;
 }
 
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+}
+
 .hero__title {
-  width: 696px;
   margin-left: auto;
   margin-right: auto;
+  font-size: 26px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
 }
 
+@media screen and (max-width: 479px) {
+  .hero__title {
+    max-width: 360px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .hero__title {
+    width: 360px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
+
 .main-btn {
   margin-top: 30px;
   padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
   color: #ffffff;
   border: 0;
   box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.15);
-  align-items: center;
   letter-spacing: 0.06em;
   background-color: #2196f3;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -376,8 +566,37 @@ img {
   background-color: #2f303a;
 }
 
-.footer__sections {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .footer__sections {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__sections {
+    justify-content: flex-start;
+  }
+}
+
+.footer__address-section {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__address-section {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__address-section {
+    align-items: flex-start;
+    text-align: left;
+  }
 }
 
 .footer__logo {
@@ -410,10 +629,26 @@ img {
   color: #ffffff;
 }
 
-.footer__subscribe-section {
-  display: flex;
-  flex-direction: column;
-  margin-left: 70px;
+@media screen and (max-width: 767px) {
+  .footer__subscribe-section {
+    margin-top: 60px;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__subscribe-section {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__subscribe-section {
+    align-items: flex-start;
+  }
 }
 
 .footer__subscribe-text {
@@ -443,16 +678,57 @@ img {
   display: flex;
   flex-direction: column;
   margin-left: auto;
+  justify-content: center;
+  text-align: center;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__mailing-section {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__mailing-section {
+    margin-top: 60px;
+    flex-grow: 2;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .footer__mailing-section {
+    display: inline-flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__mailing-section {
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
 }
 
 .footer__mail-form {
-  display: flex;
   margin-top: 20px;
+}
+
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .footer__mail-form {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__mail-form {
+    display: flex;
+  }
 }
 
 .footer__mailing-input {
   padding: 14px 15px;
-  width: 358px;
+  width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: transparent;
@@ -466,14 +742,51 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 
+@media screen and (max-width: 767px) {
+  .footer__mailing-input {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__mailing-input {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__mailing-input {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__mailing-input {
+    width: 358px;
+  }
+}
+
 .footer__mailing-button {
   position: relative;
-  margin: 0;
-  margin-left: 12px;
   min-width: 200px;
   padding: 10px;
   padding-left: 29px;
   text-align: left;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__mailing-button {
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__mailing-button {
+    margin-left: 12px;
+    margin-top: 0;
+  }
 }
 
 .footer__mailing-icon {
