--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -1,10 +1,17 @@
 .backdrop {
   position: fixed;
+  z-index: 3;
   top: 0;
   left: 0;
+  padding: 15px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   width: 100vw;
   height: 100vh;
+  overflow-y: scroll;
 
   background-color: rgba(0, 0, 0, 0.1);
 
