--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,11 +1,11 @@
 .modal {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  margin: 0 auto;
   padding: 40px;
 
-  min-width: 528px;
-  min-height: 582px;
+  top: 50%;
+  left: 50%;
+  width: 90%;
 
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -14,6 +14,18 @@
 
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width: 479px) {
+    max-width: 450px;
+  }
+  @media screen and (min-width: 480px) {
+    width: 450px;
+    height: 609px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .backdrop.is-hidden .modal {
@@ -108,6 +120,14 @@
   }
 }
 
+.accept-label {
+  @media screen and (max-width: 1199px) {
+    font-size: 12px;
+    line-height: calc(14 / 12);
+    letter-spacing: 0.02em;
+  }
+}
+
 .modal__textarea-field {
   padding-top: 12px;
   padding-left: 16px;
@@ -128,13 +148,13 @@
 }
 
 .custom-checkbox {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
 
   width: 15px;
   height: 15px;
-  margin-right: 7px;
+  margin-right: 5px;
 
   border: 2px solid #212121;
   border-radius: 2px;
@@ -153,7 +173,6 @@
 } */
 
 .accept-label {
-  display: flex;
   align-items: center;
 }
 
