--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,31 +1,61 @@
+.clients__title {
+  margin-bottom: 50px;
+  @media screen and (max-width: 1199px) {
+    font-size: 28px;
+    line-height: 1.178;
+  }
+}
+
 .clients-list {
+  @extend %list;
+
   display: flex;
-  margin-top: 50px;
+  flex-wrap: wrap;
+  margin-left: calc(-1 * #{$main-margin});
+  margin-top: calc(-1 * #{$main-margin});
 }
 
 .clients-list__item {
+  margin-top: 30px;
+  margin-left: 30px;
+  flex-basis: calc((100% - #{$main-margin} * 2) / 2);
+
   border: 1px solid #afb1b8;
   border-radius: 4px;
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:not(:last-child) {
-    margin-right: 30px;
-  }
   &:hover,
   &:focus {
     border-color: $accent-color;
   }
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - #{$main-margin} * 3) / 3);
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - #{$main-margin} * 6) / 6);
+  }
 }
 
 .clients-list__link {
+  @extend %link;
+
   display: flex;
-  width: 168px;
-  height: 90px;
-  padding: 16px 32px;
+
+  @media screen and (min-width: 480px) {
+    padding: 15px 51px;
+  }
+  @media screen and (min-width: 768px) {
+    padding: 15px 59px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 15px 31px;
+  }
 }
 
 .clients-list__icon {
+  margin-left: auto;
+  margin-right: auto;
   fill: #afb1b8;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
