--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,10 +5,31 @@
 }
 
 .footer__sections {
-  display: flex;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 1200px) {
+    justify-content: flex-start;
+  }
+}
+
+.footer__address-section {
+  text-align: center;
+  @media screen and (min-width: 768px) {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+  }
+  @media screen and (min-width: 1200px) {
+    align-items: flex-start;
+    text-align: left;
+  }
 }
 
 .footer__logo {
+  @extend %link;
   color: #ffffff;
 }
 
@@ -18,6 +39,10 @@
   font-style: normal;
 }
 
+.footer-address__list {
+  @extend %list;
+}
+
 .footer-address__item {
   &:not(:last-child) {
     margin-bottom: 10px;
@@ -25,6 +50,8 @@
 }
 
 .footer-address__link {
+  @extend %link;
+
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -47,9 +74,19 @@
 // Footer subscribe
 
 .footer__subscribe-section {
-  display: flex;
-  flex-direction: column;
-  margin-left: 70px;
+  @media screen and (max-width: 767px) {
+    margin-top: 60px;
+    text-align: center;
+  }
+  @media screen and (min-width: 768px) {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+  }
+  @media screen and (min-width: 1200px) {
+    align-items: flex-start;
+  }
 }
 
 .footer__subscribe-text {
@@ -82,16 +119,40 @@
   display: flex;
   flex-direction: column;
   margin-left: auto;
+  justify-content: center;
+  text-align: center;
+
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
+  @media screen and (max-width: 1199px) {
+    margin-top: 60px;
+    flex-grow: 2;
+  }
+  @media screen and (min-width: 767px) {
+    display: inline-flex;
+    align-items: center;
+  }
+  @media screen and (min-width: 1200px) {
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
 }
 
 .footer__mail-form {
-  display: flex;
   margin-top: 20px;
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
+    display: flex;
+    flex-direction: column;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 
 .footer__mailing-input {
   padding: 14px 15px;
-  width: 358px;
+  width: 100%;
 
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -105,16 +166,38 @@
   &::placeholder {
     color: rgba(255, 255, 255, 0.6);
   }
+
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 20px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 450px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+  }
 }
 
 .footer__mailing-button {
   position: relative;
-  margin: 0;
-  margin-left: 12px;
+
   min-width: 200px;
   padding: 10px;
   padding-left: 29px;
   text-align: left;
+
+  @media screen and (max-width: 1199px) {
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 12px;
+    margin-top: 0;
+  }
 }
 
 .footer__mailing-icon {
