--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,22 +1,32 @@
 .team {
   background-color: #f5f4fa;
+  display: none;
 }
 
 .team-list {
-  display: flex;
-  margin-top: 50px;
+  // display: flex;
+  margin-top: 30px;
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 50px;
+  }
 }
 
 .team-list__item {
-  flex-basis: calc((100% - #{$main-margin} * 3) / 4);
+  // flex-basis: calc((100% - #{$main-margin} * 3) / 4);
 
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
-  &:not(:last-child) {
-    margin-right: $main-margin;
+  // &:not(:last-child) {
+  //   margin-right: $main-margin;
+  // }
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
 }
 
