--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,5 +1,10 @@
 .work {
+  display: none;
   padding-top: 0;
+
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
 }
 
 .work__title {
@@ -9,6 +14,8 @@
 }
 
 .work-list {
+  @extend %list;
+
   display: flex;
   flex-wrap: wrap;
 
