--- a/sass/utils/_current.scss
+++ b/sass/utils/_current.scss
@@ -1,16 +1,18 @@
 .current {
   color: $accent-color;
-  &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom: -1px;
-    left: 0;
+  @media screen and (min-width: 768px) {
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      bottom: -1px;
+      left: 0;
 
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
 
-    background-color: $accent-color;
+      background-color: $accent-color;
+    }
   }
 }
