--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -5,9 +5,11 @@
 
 .team-title {
   margin-bottom: 30px;
+  font-size: 28px;
 
   @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
+    font-size: 36px;
   }
 }
 
