--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,8 +1,10 @@
 .clients__title {
-  margin-bottom: 50px;
-  @media screen and (max-width: 1199px) {
-    font-size: 28px;
-    line-height: 1.178;
+  margin-bottom: 30px;
+  font-size: 28px;
+  line-height: 1.178;
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    margin-bottom: 50px;
   }
 }
 
