--- a/sass/portfolio-main.scss
+++ b/sass/portfolio-main.scss
@@ -10,3 +10,4 @@
 @import "./components/responsive-img";
 @import "./components/social";
 @import "./layout/footer";
+@import "./layout/modal-low-resolve";
