--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,22 @@ img {
   text-decoration: none;
 }
 
+@media screen and (max-width: 239px) {
+  .header,
+  .main,
+  .footer {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 240px) {
+  .header,
+  .main,
+  .footer {
+    display: block;
+  }
+}
+
 .container {
   margin: 0 auto;
   width: 100%;
@@ -1287,5 +1303,23 @@ img {
   .modal-btn {
     padding: 5px;
   }
+}
+
+.low-resolwe-modal {
+  display: block;
+  font-size: 14px;
+  background-color: #2f303a;
+  padding: 15px;
+  height: 100vh;
+}
+
+@media screen and (min-width: 240px) {
+  .low-resolwe-modal {
+    display: none;
+  }
+}
+
+.low-resolwe-modal__text {
+  color: aliceblue;
 }
 /*# sourceMappingURL=main.css.map */
