--- a/css/portfolio-main.css
+++ b/css/portfolio-main.css
@@ -48,6 +48,22 @@ img {
   text-decoration: none;
 }
 
+@media screen and (max-width: 239px) {
+  .header,
+  .main,
+  .footer {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 240px) {
+  .header,
+  .main,
+  .footer {
+    display: block;
+  }
+}
+
 .container {
   margin: 0 auto;
   width: 100%;
@@ -871,5 +887,23 @@ img {
   right: 28px;
   transform: translateY(-50%);
   fill: #ffffff;
+}
+
+.low-resolwe-modal {
+  display: block;
+  font-size: 14px;
+  background-color: #2f303a;
+  padding: 15px;
+  height: 100vh;
+}
+
+@media screen and (min-width: 240px) {
+  .low-resolwe-modal {
+    display: none;
+  }
+}
+
+.low-resolwe-modal__text {
+  color: aliceblue;
 }
 /*# sourceMappingURL=portfolio-main.css.map */
