--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,4 @@
 @import "./layout/footer";
 @import "./components/backdrop";
 @import "./components/modal";
+@import "./layout/modal-low-resolve";
